# LineFollower-LRC-Unity

./: .gitignore
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Scenes/: Main.unity
Assets/Scripts/: ALFRbehaviou.cs  CmdVelSubscriber.cs  GateTriggerPublisher.cs  GripperController.cs  GripperSubscriber.cs  IRArrayPublisher.cs  IRsensorArray.cs  LCDlogic.cs  ObjectMover.cs  RobotController.cs  SARcontroller.cs  SonarPublisher.cs  SonarSensor.cs  gateLogic.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/materials/: green.mat  orange.mat  red.mat
Assets/materials/Materials/: picgroup.mat
Assets/prefabs/: arena.fbx  gate.blend
Docs/: Design-Documentation.md  Design-Documentation.md.backup  Design-Documentation.tex
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
ROS2/: README.md
ROS2/lrc_arena_msgs/: CMakeLists.txt  package.xml
ROS2/lrc_arena_msgs/msg/: IRArray.msg
ROS2/lrc_arena_nodes/: package.xml  setup.cfg  setup.py
ROS2/lrc_arena_nodes/launch/: arena_devices.launch.py
ROS2/lrc_arena_nodes/lrc_arena_nodes/: led_controller.py  loadcell_lcd_controller.py  pump_controller.py
ROS2/lrc_arena_nodes/resource/: lrc_arena_nodes
